fix(TCOMP-2631): fix decode wrong parameter
- use StandardCharsets instead of string