@@ -32,6 +32,7 @@ import java.io.Writer;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
 import java.time.LocalDateTime;
@@ -390,7 +391,8 @@ public class CarMain {
             if ("jar".equals(url.getProtocol())) {
                 final String spec = url.getFile();
                 final int separator = spec.indexOf('!');
-                return new File(URLDecoder.decode(new URL(spec.substring(0, separator)).getFile(), "UTF-8"));
+                return new File(
+                        URLDecoder.decode(new URL(spec.substring(0, separator)).getFile(), StandardCharsets.UTF_8));
 
             } else if ("file".equals(url.getProtocol())) {
                 return toFile(resourceName, url);
@@ -406,7 +408,8 @@ public class CarMain {
 
     private static File toFile(final String classFileName, final URL url) {
         final String path = url.getFile();
-        return new File(URLDecoder.decode(path.substring(0, path.length() - classFileName.length())), "UTF-8");
+        return new File(
+                URLDecoder.decode(path.substring(0, path.length() - classFileName.length()), StandardCharsets.UTF_8));
     }
 
     private static void deployToNexus(final String serverUrl, final String repositoryName, final String username,
